[package]
name = "giputils"
version = "0.3.6"
edition = "2024"
license = "MIT"
authors = ["Yuheng Su <gipsyh.icu@gmail.com>"]
repository = "https://github.com/gipsyh/giputils"
description = "Some useful utilities for rust programming"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "giputils"
crate-type = ["staticlib", "rlib"]

[dependencies]
ahash = "0.8.11"
log = "0.4.27"
rand = "0.10.0"
serde = { version = "1.0.228", features = ["derive"] }
tempfile = "3.14.0"
